<resources>
    <string name="app_name">FitnessUp</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="username_tx">username</string>
    <string name="forget_password_txt">Forget Password?</string>
    <string name="login_txt">Login</string>
    <string name="register_txt">REGISTER</string>
    <string name="register_page_txt">Register Page</string>
    <string name="enter_full_name_txt">Enter Full Name</string>
    <string name="user_name_txt">User Name</string>
    <string name="email_txt">Email</string>
    <string name="password">Password</string>
    <string name="your_fitness_app">Your Fitness App</string>
    <string name="forget_password_tx">Forget Password</string>
    <string name="enter_your_email_to_receive_otp">Enter your email to receive reset password link</string>
    <string name="enter_email">Enter Email</string>
    <string name="next_txtx">Next</string>
    <string name="fitnessapp_slogan">FitnessApp</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">ID</string>
    <string name="title_activity_home2">Home2</string>
    <string name="profile">Profile</string>
    <string name="email_login">Email</string>
    <string name="android_studio">Android Studio</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="help_center">Help Center</string>
    <string name="others_txtx">Others</string>
    <string name="social">Social</string>
    <string name="bml_calculator">BML Calculator</string>
    <string name="press_for_more_info">Press Here For More Info</string>
    <string name="imperial_txt">Imperial</string>
    <string name="weight_metric">Weight in kg</string>
    <string name="height_metric">Height in m</string>
    <string name="weight_imperial">Weight in pounds</string>
    <string name="height_imperial">Height in inch</string>
    <string name="more_information">More information on Wikipedia</string>
    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>
    <string name="bmi_result">BMI: %s</string>
    <string name="bmi_cat_1">Very severely underweight</string>
    <string name="bmi_cat_2">Severely underweight</string>
    <string name="bmi_cat_3">Underweight</string>
    <string name="bmi_cat_4">Normal (healthy weight)</string>
    <string name="bmi_cat_5">Overweight</string>
    <string name="bmi_cat_6">Obese Class I (Moderately obese)</string>
    <string name="bmi_cat_7">Obese Class II (Severely obese)</string>
    <string name="bmi_cat_8">Obese Class III (Very severely obese)</string>
    <string name="bmi_cat_9">Obese Class IV (Morbidly Obese)</string>
    <string name="bmi_cat_10">Obese Class V (Super Obese)</string>
    <string name="bmi_cat_11">Obese Class VI (Hyper Obese)</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="default_unit">@string/metric</string>
    <string name="in_kgs">IN KGs</string>
    <string name="in_cms">IN CMs</string>
    <string name="calculate">Calculate</string>
    <string name="tips">Tips</string>
    <string name="title_activity_add_reminder">Create Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="add_reminder">Please Enter Your Reminder Note Here!</string>
    <string name="details">Other Information</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval</string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Remove Your Reminder</string>
    <string name="action_save_reminder">Save Your Reminder</string>
    <string name="no_reminders">Please click on Float button to create a reminder</string>
    <string name="weight_loss">If you are reading this, it means that you concern about losing weight.
        Our application offers you a unique training methods of different workouts. Cardio full body and trouble zone oriented workouts will help you burn more calories in less time. To maintain a stable weight loss, take a closer look at your eating habits and make healthy choices. In this app, you will discover the important info about working out and everything connected with healthy living.</string>
    <string name="about_lose_weight">About Lose Weight</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="motivation">In order to achieve your weight loss goals faster, maintain your motivation hign. There are some adivces which will increase your level motivation. First, stick to the plan. It makes your workout more challeging when you follow a plan, gradually increase the workout intensity and review your stats and progress. Second, get an audio instructuion. It will help you to workout correctly and will stay motivated. Last but no least, manage your workout schedule. Develop a schedule, so that you can workout based on the scheduled.</string>
    <string name="waterandfood">Hydrate throughtout your day, not just after a workout.Get in the habit of sipping water continuously during the day. If you start your workout dehydrated, you won\'t get the maximum out of your workout, as water helps your body to exercise more efficiently. General guidelines are to drink 17 to 20 ounces of water 2 to 3 hours before exercising, another 8 ounces during your warm-up, 7 to 10 ounces every 10 to 20 minutes during exercise, and 8 ounces of water within 30 minutes after exercising.</string>
    <string name="workout">Strength training or crdio? Which is better? Although it\'s a reasonable question, there is no correct answer. Each exercise is different and achieves totally different result. Cardio improves your cardiovascular fitness and it is the main method of burning fat and losing weight. Strength training builds and strengthens your muscles to make you stronger and improve muscle definition. So whether you exercise for health reasons or just to look good, both types of exercise are important.</string>
    <string name="drinktoavoid">The calories that we drink dont make us feel full, so why consume them? Here are a few examples: a fancy coffee drink with milk and whipped cream can contain up to 800 calories, one glass of soda contained about 140 calories . You are now loaded with calories, and you ares till hungry. Additionally, due to the high sugar levels in most of such drinks, you will most likely overeat afterwards. So it it important to watch what you drink.</string>
    <string name="avoidfood">Try to avoid any over-processed foods-pastry, cheese and meat. Homemade baked goods and regular meat and cheese are fine on occasion, but processed food are packed with sugar and contained a lots of unhealthy ingredients that are harmful for your health. Soda and fancy coffee drinks can contain as many calories as a meal except that they wont fill you up.Most fast food prodcuts are to be avoided too, but we are sure that you know that. So, stay away from processed food and stay healthy.</string>
    <string name="sugar">Many adults eat much more sugar than necessary, so reducing added sugar intake is a healthful idea for most people. Some people may wish to take it a step further and cut sugar out of their diet entirely. The no-sugar diet has gained popularity as people continue to look for effective ways to live a healthful life or lose weight.</string>
    <string name="salt">We live in a society that measures and medicates. All the tools and technology and medicines deployed to maintain heart health are a help. However, heart disease remains the No. 1 killer in America. And high blood pressure, or hypertension, is a major contributor. Even so, heart disease is largely preventable, and much of that prevention lies in small steps that can make a big difference; diet is foremost among them. To lower your blood pressure, you need to reduce salt intake.</string>
    <string name="ttip">For new presentations, you’ll spend at least 10 hours outlining, researching, and creating your presentation for every seminar hour. Thus, a new eight-hour seminar will take 80 to 100 hours to create. So prepare it at least one month in advance, and practice it several times before presenting it. Always plan to speak for less time than you anticipate, so you can leave room in your program for spontaneous stories, unanticipated conversations, and unexpected questions.</string>
    <string name="gfp">Polyunsatured fats are essential fats, meaning that our bodies ned them to function properly. Among their primary functions are building cell membranes and the covering of nerves. Polyunsaturated fats are necessary for muscle movement and blood clotting. Polyunsaturated fats can help reduce bad cholesterol levels in your blood which can lower your risk of heart disease and stroke. They also provide nutrients to help develop and maintain your body’s cells. </string>
    <string name="protein">Protein is an organic compund that is made up of amino acids and is an essential part of any complex living organism. Most cells in out bodies are made up of protein, which we need to grow and to recover. Protein is also an important element of our muscle tissue, hair, immune system and it makes up essential hormones.Because we don’t store amino acids, our bodies make them in two different ways: either from scratch, or by modifying others. Nine amino acids—histidine, isoleucine, leucine, lysine, methionine, phenylalanine, threonine, tryptophan, and valine—known as the essential amino acids, must come from food.</string>
    <string name="good_fats_monounsaturated_fats">Good fats: monounsaturated fats</string>
    <string name="superman1">1. Lay face down on a mat or flat surface, with arms outstretched.</string>
    <string name="superman2">2. Keep your hands and arms straight throughout the exercise.</string>
    <string name="superman3">3. Raise your hand and legs 4-5 inches off the ground.</string>
    <string name="superman4">4. Hold for 5 seconds, then return to starting position.</string>
    <string name="wpu_step1">1. Start in plank position with your hands wider than your shoulders.</string>
    <string name="wpu_step2">2. Face your fingers forward or slightly to the outside.</string>
    <string name="wpu_step3">3. Slowly bend your elbows out to the side as you lower your body toward the floor.</string>
    <string name="wpu_step4">4. Pause when your chest is just below your elbows.</string>
    <string name="wpu_step5">5. Engage your core as you press into your hands to lift your body back to the starting position.</string>
</resources>