<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:padding="30dp"
    android:id="@+id/forgot_snackbar"
    tools:context=".LoginAndRegister.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/nav_user_photo"
            android:layout_width="328dp"
            android:layout_height="118dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/fotgotpass" />

        <TextView
            android:id="@+id/nav_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="FOrgot Password"
            android:textAllCaps="true"
            android:textColor="@color/md_blue_grey_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_your_email_to_receive_otp"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pss_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/enter_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="@string/next_txtx"
            android:textColor="#fff"
            />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button"
            android:text="Back To Login Page "
            android:textColor="#fff"
            android:onClick="btn_forback"
            />


    </LinearLayout>
</LinearLayout>