<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Functions.WorkoutCategories.ArmDetails.superman">

    <TextView
        android:id="@+id/superman_step2"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_above="@+id/superman_step3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:justificationMode="inter_word"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="16dp"
        android:text="@string/superman2"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:textFontWeight="600"
        app:layout_constraintBottom_toTopOf="@+id/superman_step3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="295dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_round"
        android:onClick="superman_btn_arm"
        android:text="Back"
        app:layout_constraintBottom_toTopOf="@+id/superman_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/superman_title"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="55dp"
        android:text="superman"
        android:textAllCaps="true"
        android:textColor="@color/md_black_1000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/supermanvideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/supermanvideo"
        class="com.google.android.youtube.player.YouTubePlayerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="137dp"
        android:layout_marginBottom="420dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="298dp"
        android:text="STEPS:"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/superman_step1"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_above="@+id/superman_step2"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:justificationMode="inter_word"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="20dp"
        android:text="@string/superman1"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
       android:textFontWeight="600"
        app:layout_constraintBottom_toTopOf="@+id/superman_step2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/superman_step3"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_above="@+id/superman_step4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="12dp"
        android:text="@string/superman3"
        android:textColor="@color/md_black_1000"
        android:justificationMode="inter_word"
        android:textSize="16sp"
       android:textFontWeight="600"
        app:layout_constraintBottom_toTopOf="@+id/superman_step4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/superman_step4"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="34dp"
        android:justificationMode="inter_word"
        android:layout_marginBottom="80dp"
        android:text="@string/superman4"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="412dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="354dp" />

</androidx.constraintlayout.widget.ConstraintLayout>